2007-08-02  Michael Smith <msmith@fluendo.com>

	* flumotion/admin/rrdmon/main.py:
	* flumotion/manager/main.py:
	* flumotion/worker/main.py:
	  When daemonizing, default for daemonizeTo should be '/', not None.
	  Fixes #734.

2007-08-01  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/admin.py (AdminModel.remote_log): Removed, not
	used since time memorial.

	* flumotion/test/common.py (useGtk2Reactor): Following popular but
	impolite demands, don't default to randomness.

	* flumotion/test/Makefile.am (EXTRA_DIST): Fix import, for the
	last time.

	* flumotion/test/common.py: Provide a way to use either the gtk2
	or the select reactor in tests. Fixes #675. By default choose
	randomly. Perhaps a bad idea?

	* flumotion/test/test_common_package.py: Reorder imports so
	reactor install workses.

	* flumotion/test/Makefile.am (EXTRA_DIST): Add signal mixin test,
	this time correctly.

2007-07-30  Arek Korbik  <arkadini@gmail.com>

	* flumotion/test/gtkunit.py (GtkTestCase.set_widget):
	flumotion-template does use the set_widget() method - revert part
	of the r5316.

2007-07-30  Arek Korbik  <arkadini@gmail.com>

	* flumotion/test/test_comptest.py (CompatTestCase.failUnlessFailure):
	FINE, just provide the whole method.

2007-07-30  Arek Korbik  <arkadini@gmail.com>

	* flumotion/test/test_comptest.py (CompatTestCase.failUnlessFailure):
	Fine, provide the method more explicitly.

2007-07-30  Arek Korbik  <arkadini@gmail.com>

	* flumotion.spec.in:
	Add flumotion-rrdmon.

2007-07-30  Arek Korbik  <arkadini@gmail.com>

	* flumotion/test/test_comptest.py (CompatTestCase, CompTestTestCase,
	  TestComponentWrapper):
	Add failUnlessFailure method (for Twisted 2.0 compatibility).

2007-07-30  Arek Korbik  <arkadini@gmail.com>

	* flumotion/test/test_comptest.py:
	Use assertEquals instead of failUnlessEquals (for Twisted 2.0
	compatibility).

2007-07-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent.py