@@ -86,7 +86,7 @@ def _createParser():
                      default=False,
                      help="run in background as a daemon")
     group.add_option('', '--daemonize-to',
-                     action="store", dest="daemonizeTo", default="/",
+                     action="store", dest="daemonizeTo",
                      help="what directory to run from when daemonizing")
 
     parser.add_option('-L', '--logdir',
@@ -269,6 +269,8 @@ def main(args):
     if options.daemonize:
         if options.serviceName:
             name = options.serviceName
+        if not options.daemonizeTo:
+            options.daemonizeTo = "/"
 
     common.startup("manager", name, options.daemonize, 
         options.daemonizeTo)
